@@ -1,5 +1,17 @@
 2018-04-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
+	* arts-2-3-1015
+
+	* src/m_surface.cc (iySurfaceRtpropCalc): Should now also work for
+	2D and 3D, but not tested.
+
+	* src/jacobian.cc (diy_from_pos_to_rgrids): New function.
+
+	* src/rte.cc (rtmethods_jacobian_init): Size diy_dx also for
+	surface variables by using FOR_ANALYTICAL_JACOBIANS_DO2.
+
+2018-04-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
 	* arts-2-3-1014
 
 	* src/rte.cc (iyb_calc_body, iyb_calc)
